# qt_market

./: CMakeLists.txt  Makefile  MarketQt.pro  README.md  consts.h  form.cpp  form.h  form.ui  main.cpp  markethttpclient.cpp  markethttpclient.h  orderswindow.cpp  orderswindow.ui  products.db  producttablemodel.cpp  producttablemodel.h
Exceptions/: AppException.cpp  AppException.h  MarketException.cpp  MarketException.h  NotFoundException.cpp  NotFoundException.h  TimeoutException.cpp  TimeoutException.h
Http/: HttpClient.cpp  HttpClient.h  MarketHttpClient.cpp  MarketHttpClient.h  MarketRequestInterceptor.cpp  MarketRequestInterceptor.h
Infrastructure/: MarketSettings.cpp  MarketSettings.h
Infrastructure/DI/: ServiceLocator.cpp  ServiceLocator.h
Infrastructure/Models/: ItemInfo.cpp  ItemInfo.h  ItemMassInfoResult.cpp  ItemMassInfoResult.h  OfferInfo.cpp  OfferInfo.h  OrderResponse.cpp  OrderResponse.h  TradeResponse.cpp  TradeResponse.h
Infrastructure/Repositories/: ProductRepository.cpp  ProductRepository.h
Jobs/: UpdateTradePricesJob.cpp  UpdateTradePricesJob.h
Models/: Product.cpp  Product.h  ProductTableModel.cpp  ProductTableModel.h
Orders/: OrdersContext.cpp  OrdersContext.h
Services/: Logger.cpp  Logger.h  ProductManager.cpp  ProductManager.h
Trades/: TradesContext.cpp  TradesContext.h
exceptions/: MarketException.cpp  MarketException.h
infrastructure/: httpclient.cpp  httpclient.h  markethttpclient.cpp  markethttpclient.h  marketsettings.cpp  marketsettings.h
infrastructure/helpers/: stringhelper.cpp  stringhelper.h
infrastructure/models/: iteminfo.cpp  iteminfo.h  itemmassinforesult.cpp  itemmassinforesult.h  offerinfo.cpp  offerinfo.h  traderesponse.cpp  traderesponse.h
infrastructure/repositories/: productrepository.cpp  productrepository.h
jobs/: updatetradepricesjob.cpp  updatetradepricesjob.h
models/: product.cpp  product.h  producttablemodel.cpp  producttablemodel.h
pages/: menu.cpp  menu.h  menu.ui  orderswindow.cpp  orderswindow.h  orderswindow.ui
resources/: images.qrc
ui/: MainWindow.cpp  MainWindow.h  MarketManagementContent.cpp  MarketManagementContent.h  MarketManagementContent.ui  ProductsTableWidget.cpp  ProductsTableWidget.h  ProductsTableWidget.ui
workers/: OrderWorker.cpp  OrderWorker.h  TradeWorker.cpp  TradeWorker.h  Worker.cpp  Worker.h  WorkerManager.cpp  WorkerManager.h  worker.cpp  worker.h
